1999-11-18  Nick Clifton  <nickc@cygnus.com>

	* config/tc-mcore.h (TC_FORCE_RELOCATION): Define for Mcore-pe
	target.
	
	* config/tc-mcore.c (tc_gen_reloc): Support generation of RVA
	relocs.
	(mcore_force_relocation): Force relocations to be generated for
	RVA relocs.

1999-11-16  Alan Modra  <alan@spri.levels.unisa.edu.au>

	* config/tc-i386.c (i386_immediate): Disallow O_big immediates.
	(i386_displacement): Disallow O_big displacements.

Mon Nov 15 20:12:43 1999  Donald Lindsay  <dlindsay@cygnus.com>

	* config/tc-arm.c (do_mia,do_mar,do_mra,do_pld,do_ldrl,do_co_reg): Small
	improvements in error checking.
	(md_assemble): Support for unconditional ARM instructions.
	(md_parse_option): Support for -m[arm]v5e flag.

1999-11-12  Nick Clifton  <nickc@cygnus.com>

	* macro.c (buffer_and_nest): Do not check beyond the end of the
	buffer. 

1999-11-11  Nick Clifton  <nickc@cygnus.com>

	* macro.c (buffer_and_nest): Look for seperator after TO and
	FROM tokens.

1999-11-08  Andrew Haley  <aph@cygnus.com>

	* app.c (do_scrub_chars): When in State 10, treat backslash
	characters in the same way as as symbol characters.

1999-11-07  Richard Henderson  <rth@cygnus.com>

	* config/tc-alpha.c (alpha_align): Check, don't assert, that
	the previous label was in the current section before playing
	with auto-alignment.

1999-11-06  Nick Clifton  <nickc@cygnus.com>

	* config/tc-v850.c (v850_force_relocation): Force relocation
        for weak symbols.
	(v850_pcrel_from_selection): Do not compute a pcrel offset if
        the symbol is weak.

1999-11-05  Michael Meissner  <meissner@cygnus.com>

	* expr.h (operatorT): Increase machine dependent operators to 16.
	* expr.c (op_rank): Ditto.

1999-11-03  Ian Lance Taylor  <ian@zembu.com>

	* read.c (pseudo_set): Reject attempts to set the value of a
	section symbol.

	* config/obj-elf.c (obj_elf_ident): Call md_flush_pending_output
	if it is defined.

	* config/obj-elf.c (elf_set_index): Add ATTRIBUTE_UNUSED.
